<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">تعلیمات آنلاین ن</string>
    <string name="api_url" translatable="true">http://192.168.22.11:8070/api/v1/</string>
    <string name="splash_app_name" translatable="false">تعلیمات آنلاین ن</string>
    <string name="item_1" translatable="false">کورس</string>
    <string name="item_2" translatable="false">فعالیت درسی</string>
    <string name="item_3" translatable="false">حساب معلومات عامل</string>
    <string name="item_4" translatable="false">بحث‌ها</string>
    <string name="item_5" translatable="false">کتابخانه</string>
    <string name="profile_item_1" translatable="false">پروفایل</string>
    <string name="profile_item_2" translatable="false">آمار</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="navi_item_1" translatable="false">خانه</string>
    <string name="navi_item_2" translatable="false">پروفایل</string>
    <string name="navi_item_3" translatable="false">کورس</string>
    <string name="navi_item_5" translatable="false">شکایت</string>
    <string name="navi_item_4" translatable="false">خروج</string>
    <string name="navi_item_6" translatable="false">شخص اختصاص داده شده</string>
    <string name="navi_item_7" translatable="false">کتابخانه</string>
    <string name="email" translatable="false">آدرس ایمیل</string>
    <string name="password" translatable="false">رمز عبور</string>
    <string name="login" translatable="false">ورود</string>
    <string name="signup" translatable="false"> ثبت نام</string>
    <string name="validation_enterEmail" translatable="false">آدرس ایمیل را وارد کنید</string>
    <string name="validation_validEmail" translatable="false">آدرس ایمیل نامعتبر</string>
    <string name="validation_enterPassword" translatable="false">رمز عبور را وارد کنید</string>
    <string name="validation_passwordLenght" translatable="false">رمز عبور باید حداقل 6 حرف باشد</string>
    <string name="validation_enterNewPassword" translatable="false">رمز عبور جدید را وارد کنید</string>
    <string name="validation_enterOldPassword" translatable="false">رمز عبور فعلی را وارد کنید</string>
    <string name="validation_enterConfirmPassword" translatable="false">رمز عبور جدید را تائید کنید</string>
    <string name="validation_passwordNotMatch" translatable="false">رمزهای عبور مطابقت ندارند</string>
    <string name="validation_enterFirstName" translatable="false">نام را وارد کنید</string>
    <string name="validation_enterLastName" translatable="false">تخلص را وارد کید</string>
    <string name="validation_enterContact" translatable="false">شماره تلفن را وارد کنید</string>
    <string name="validation_validContact" translatable="false">شماره تلفن نامعتبر است</string>
    <string name="validation_quiz" translatable="false">لطفا پاسخ را انتخاب کنید</string>
    <string name="validation_enterUserName" translatable="false">نام کاربر را وارد کنید</string>
    <string name="validation_enterFullName" translatable="false">نام را وارد کنید</string>
    <string name="validation_enterBio" translatable="false">بیوگرافی را وارد کنید</string>
    <string name="validation_username_already_exist" translatable="false">این نام کاربر در حال حاضر وجود دارد</string>
    <string name="validation_email_password_incorrect" translatable="false">آدرس ایمیل و یا هم رمز عبور اشتباه است</string>
    <string name="validation_search_text" translatable="false">لطفا موضوع جستجو را وارد کنید</string>
    <string name="validation_passwordStrong" translatable="false"><![CDATA[رمزعبور بسیار ضعیف است. رمزعبور تان باید متشکل از حروف کلان و خورد انگلیسی، سمبول(*@_!&%$#) و اعداد باشد، بطور مثال: Noon@123]]></string>
    <string name="validation_logout" translatable="false">آیا مطمئن هستید که می خواهید از سیستم خارج شوید؟</string>
    <string name="validation_warning" translatable="false">هشدار</string>
    <string name="validation_Connect_internet" translatable="false">لطفا به اینترنت وصل شوید</string>
    <string name="validation_maximum_download" translatable="false">لطفا صبر کنید، شما حداکثر سه فایل را در یک زمان دانلود کرده میتوانید</string>
    <string name="validation_profile_Update" translatable="false">آپدیت پروفایل</string>
    <string name="validation_download_permission" translatable="false">دانلود نیاز به اجازه خارجی دارد</string>
    <string name="validation_check_internet" translatable="false">لطفا اتصال اینترنت خود را بررسی کنید.</string>
    <string name="validation_enter_title" translatable="false">موضوع</string>
    <string name="validation_enter_assignment_title" translatable="false">لطفا نام کارخانگی را وارد کنید</string>
    <string name="validation_enter_comment" translatable="false">نظر</string>
    <string name="validation_delete" translatable="false">مطمئنید که میخواهید این موضوع را حذف کنید؟</string>
    <string name="validation_passcode" translatable="false">لطفا کد را وارد کنید</string>
    <string name="validation_passcodelength" translatable="false">لطفا کد شش رقمی را وارد کنید</string>
    <string name="validation_invalidpasscode" translatable="false">لطفا کد معتبر را وارد کنید</string>
    <string name="validation_remark" translatable="false">لطفا ملاحظارت را وارد کنید</string>
    <string name="validation_Score" translatable="false">لطفا نمره را وارد کنید</string>
    <string name="error_try_again" translatable="false">پاسخ اشتباه ...! لطفا دوباره کوشش کنید</string>
    <string name="error_unknown" translatable="false">خرابی شبکه...! لطفا دوباره کوشش کنید</string>
    <string name="error_time_out" translatable="false">اتمام مهلت ...! لطفا دوباره کوشش کنید</string>
    <string name="error_no_internet_connection" translatable="false">دستگاه تان به انترنت وصل نیست ...!</string>
    <string name="error_again_to_exit" translatable="false">لطفا دوباره روی بازگشت کلیک کنید تا خارج شوید</string>
    <string name="error_file_not_found" translatable="false">فایل پیدا نشد...! لطفا فایل را دانلود کرده، دوباره کوشش کنید</string>
    <string name="error_reminder_login" translatable="false">دستگاه تان به انترنت وصل نیست...! لطفا برای ادامه به اینترنت متصل شوید</string>
    <string name="error_no_space" translatable="false">فضای خالی در دستگاه موجود نیست</string>
    <string name="error_no_found_previous_lesson" translatable="false">درس قبلی پیدا نشد</string>
    <string name="error_no_handler_this_type_file" translatable="false">هیچ پردازنده ای برای این نوع فایل وجود ندارد.</string>
    <string name="error_no_application" translatable="false">هیچ اپلکیشن ای برای این نوع فایل وجود ندارد.</string>
    <string name="error_no_any_notifcation" translatable="false">هیچ اعلانی دریافت نکرده اید</string>
    <string name="error_no_book_found" translatable="false">هیچ کتابی یافت نشد</string>
    <string name="no_page_found" translatable="false">صفحه یافت نشد</string>
    <string name="error_please_subscription_for_this_additional_services" translatable="false">شما برای این خدمات اشتراک نکرده‌اید</string>
    <string name="search_hint" translatable="false">جستجو کنید</string>
    <string name="dash" translatable="false">-</string>
    <string name="completed" translatable="false">تکمیل شده</string>
    <string name="per" translatable="false">%تکمیل شده&#160;</string>
    <string name="terminated" translatable="false">منقضی شده</string>
    <string name="on_going" translatable="false">در حال جریان</string>
    <string name="newstring" translatable="false">جدید</string>
    <string name="gradeString" translatable="false">صنف</string>
    <string name="none" translatable="false">ھمه صنوف</string>
    <string name="next_button" translatable="false">بعدی</string>
    <string name="next" translatable="false">بعدی</string>
    <string name="previous" translatable="false">قبلی</string>
    <string name="continues" translatable="false">ادامه</string>
    <string name="previous_lesson" translatable="false">درس قبلی</string>
    <string name="lessThen" translatable="false">صفحه قبلی</string>
    <string name="greterThen" translatable="false">صفحه بعدی</string>
    <string name="clear" translatable="false">پاک کنید</string>
    <string name="question" translatable="false">سوال</string>
    <string name="selectAnAnswer" translatable="false">یک پاسخ را انتخاب کنید</string>
    <string name="quiz_passed" translatable="false">مبارک، شما کامیاب شده اید</string>
    <string name="quiz_failed" translatable="false">شما کامیاب نشده اید</string>
    <string name="try_again" translatable="false">دوباره کوشش کنید</string>
    <string name="reset_password" translatable="false">تغییر رمز عبور</string>
    <string name="button_ok" translatable="false">بله</string>
    <string name="button_cancel" translatable="false">لغو</string>
    <string name="new_password" translatable="false">رمز عبور جدید</string>
    <string name="old_password" translatable="false">رمز عبور فعلی</string>
    <string name="confirm_password" translatable="false">تائید رمز عبور جدید </string>
    <string name="username" translatable="false">نام کاربر</string>
    <string name="firstname" translatable="false">نام</string>
    <string name="lastname" translatable="false">تخلص</string>
    <string name="e_mail" translatable="false">آدرس ایمیل</string>
    <string name="phone_number" translatable="false">شماره تلفن</string>
    <string name="submit" translatable="false">ارسال</string>
    <string name="complaint" translatable="false">شکایت</string>
    <string name="my_courses" translatable="false">کورس های من</string>
    <string name="edit" translatable="false">ویرایش</string>
    <string name="unread_notifictions" translatable="false">اعلانات خوانده نشده</string>
    <string name="average_quiz_score" translatable="false">حد اوسط نمره امتحان</string>
    <string name="average_assignment_score" translatable="false">حد اوسط نمره فعالیت درسی</string>
    <string name="complete_courses" translatable="false">کورس های تکمیل شده</string>
    <string name="total_available_courses" translatable="false">مجموع کورس های قابل دسترس</string>
    <string name="terminated_courses" translatable="false">کورس های منقضی شده</string>
    <string name="total_courses" translatable="false">مجموع کورس های</string>
    <string name="playvideotag_key" translatable="false">پخش ویدیو</string>
    <string name="loading" translatable="false">در حال آماده شدن</string>
    <string name="quiz_summary" translatable="false">نتیجه امتحان</string>
    <string name="yourscore" translatable="false">نمره شما</string>
    <string name="passingscore" translatable="false">نمره کامیابی</string>
    <string name="seconds" translatable="false">ثانیه</string>
    <string name="alertTitleWhenFirstTimeDownload">جهت دانلود بی‌نقص فایل، لطفا تا پایان دانلود از کورس خارج نشوید و قبل از شروع دانلود، دانلودهای خارج از اپ نون را متوقف کنید.</string>
    <string name="ok">بلی</string>
    <string name="cancel">کنسل</string>
    <string name="email_address">ایمیل آدرس</string>
    <string name="register">ثبت نام</string>
    <string name="already_have_an_account">قبلا حساب داشته‌اید؟</string>
    <string name="sign_up_with_trial">Sign Up with Trial</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="activate_deactivate_device">Activate/Deactivate device</string>
    <string name="clicking_below_button">You can deactivate or activate your device by clicking on the below button.</string>
    <string name="activate_deactivate">Activate/Deactivate</string>
    <string name="out_of_device_quota">You are out of device quota</string>
    <string name="device_activate_instruction">Please deactivate another device or request \na quota extension from the Device Management \ncontrol panel in order to activate this device</string>
    <string name="go_to_device_management">GO TO DEVICE MANAGEMENT</string>
</resources>