<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLogoutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validation_warning"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLogoutMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/validation_logout"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <TextView
                android:id="@+id/txtLogoutCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_toStartOf="@+id/txtLogoutOk"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/txtLogoutOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>


    </LinearLayout>
</layout>