<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDownloadMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/alertTitleWhenFirstTimeDownload" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <TextView
                android:id="@+id/txtDownloadCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_toStartOf="@+id/txtDownloadOk"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/txtDownloadOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

    </LinearLayout>
</layout>