<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/activate_deactivate_device"
            android:textAlignment="viewStart"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/clicking_below_button"
            android:textAlignment="viewStart"
            android:textSize="@dimen/_13sdp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewActivateDeactivate"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:foreground="?android:attr/selectableItemBackground"
            android:shadowColor="@color/colorDarkBlue"
            app:cardBackgroundColor="@color/colorDarkBlue"
            app:cardCornerRadius="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/activate_deactivate"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>