<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:id="@+id/mainAdvanceSearchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="2dp"
        app:cardElevation="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/chknew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorMoreDarkGray"
                        android:fontFamily="@font/bahij_helvetica_neue_bold"
                        android:text="@string/newstring"
                        android:textColor="@color/colorMoreDarkGray" />

                    <CheckBox
                        android:id="@+id/chkongoing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorMoreDarkGray"
                        android:fontFamily="@font/bahij_helvetica_neue_bold"
                        android:text="@string/on_going"
                        android:textColor="@color/colorMoreDarkGray" />

                    <CheckBox
                        android:id="@+id/chkterminated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorMoreDarkGray"
                        android:fontFamily="@font/bahij_helvetica_neue_bold"
                        android:text="@string/terminated"
                        android:textColor="@color/colorMoreDarkGray" />

                    <CheckBox
                        android:id="@+id/chkcompleted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorMoreDarkGray"
                        android:fontFamily="@font/bahij_helvetica_neue_bold"
                        android:text="@string/completed"
                        android:textColor="@color/colorMoreDarkGray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bahij_helvetica_neue_bold"
                        android:text="@string/gradeString"
                        android:textColor="@color/colorMoreDarkGray" />

                    <Spinner
                        android:id="@+id/spinnerSearchGrade"
                        style="@style/SpinnerTheme"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:drawSelectorOnTop="true"
                        android:dropDownVerticalOffset="@dimen/_25sdp"
                        android:popupBackground="@color/colorDarkGray"
                        android:textColor="@color/colorMoreDarkGray" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardsearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/bahij_helvetica_neue_bold"
                        android:gravity="center"
                        android:text="@string/search_hint"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_13sdp" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardclear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/bahij_helvetica_neue_bold"
                        android:gravity="center"
                        android:text="@string/clear"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_13sdp" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>


</layout>
