<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtFreeTrialAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/sign_up_with_trial"
            android:textAlignment="center"
            android:textColor="@color/colorDarkBlue"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_below="@+id/txtFreeTrialAccount"
            android:background="@color/colorDarkBlue" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signupEmailWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme">

                    <com.xw.repo.XEditText
                        android:id="@+id/signupEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:text=""
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="@dimen/_12sdp"
                        app:x_disableEmoji="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signupPasswordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme">

                    <com.xw.repo.XEditText
                        android:id="@+id/signupPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text=""
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="@dimen/_12sdp"
                        app:x_disableEmoji="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signupNameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme">

                    <com.xw.repo.XEditText
                        android:id="@+id/signupFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textEmailAddress"
                        android:text=""
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="@dimen/_12sdp"
                        app:x_disableEmoji="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signupLastWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:theme="@style/EditTextTheme">

                    <com.xw.repo.XEditText
                        android:id="@+id/txtSignupLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:text=""
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="@dimen/_12sdp"
                        app:x_disableEmoji="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardviewsignupTrial"
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:shadowColor="@color/colorDarkBlue"
                    app:cardBackgroundColor="@color/colorDarkBlue"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardElevation="@dimen/_5sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/register"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_14sdp" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

        <View
            android:id="@+id/viewBottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_above="@+id/txtAlreadyAccount"
            android:background="@color/colorDarkBlue" />

        <TextView
            android:id="@+id/txtAlreadyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/_10sdp"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/colorDarkBlue"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </RelativeLayout>
</layout>
